# ghbook

./: README.md  main.py  pyproject.toml
.github/workflows/: publish.yml
ghbook/: __init__.py  cli.py  converter.py
output/: clean_test_main.txt
