[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ghbook"
version = "0.1.1"
description = "Convert GhBook-style HTML book files into plain text."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
  { name = "ghbook-html2txt contributors" }
]
keywords = ["html", "text", "book", "converter", "ghbook"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Operating System :: OS Independent",
  "Topic :: Text Processing",
]

[project.urls]
Homepage = "https://github.com/Ciyoku/ghbook"
Repository = "https://github.com/Ciyoku/ghbook"

[project.scripts]
ghbook = "ghbook.cli:main"

[tool.setuptools.packages.find]
include = ["ghbook*"]
